--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,13 +1,14 @@
 #app {
   // 主体区域
   .main-container {
-    min-height: 100%;
+    height: 100%;
     transition: margin-left 0.28s;
     margin-left: 180px;
-  } // 侧边栏
+  }
+  // 侧边栏
   .sidebar-container {
     transition: width 0.28s;
-    width: 180px!important;
+    width: 180px !important;
     height: 100%;
     position: fixed;
     top: 0;
@@ -26,18 +27,30 @@
       width: 100%;
     }
   }
+  .app-main {
+    position: absolute;
+    top: 84px;
+    bottom: 0px;
+    right: 0px;
+    left: 180px;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
   .hideSidebar {
-    .sidebar-container,.sidebar-container .el-menu {
-      width: 36px!important;
+    .sidebar-container, .sidebar-container .el-menu {
+      width: 36px !important;
       // overflow: inherit;
     }
     .main-container {
       margin-left: 36px;
     }
+    .app-main {
+      left: 36px;
+    }
   }
   .hideSidebar {
     .submenu-title-noDropdown {
-      padding-left: 10px!important;
+      padding-left: 10px !important;
       position: relative;
       span {
         height: 0;
@@ -61,15 +74,15 @@
           text-align: left;
           text-indent: 20px;
           top: 0px;
-          background-color: $subMenuBg!important;
+          background-color: $subMenuBg !important;
           opacity: 1;
         }
       }
     }
     .el-submenu {
-      &>.el-submenu__title {
-        padding-left: 10px!important;
-        &>span {
+      & > .el-submenu__title {
+        padding-left: 10px !important;
+        & > span {
           display: none;
         }
         .el-submenu__icon-arrow {
@@ -78,23 +91,23 @@
       }
       .nest-menu {
         .el-submenu__icon-arrow {
-          display: block!important;
+          display: block !important;
         }
         span {
-          display: inline-block!important;
+          display: inline-block !important;
         }
       }
     }
   }
-  .nest-menu .el-submenu>.el-submenu__title,
+  .nest-menu .el-submenu > .el-submenu__title,
   .el-submenu .el-menu-item {
-    min-width: 180px!important;
-    background-color: $subMenuBg!important;
+    min-width: 180px !important;
+    background-color: $subMenuBg !important;
     &:hover {
-      background-color: $menuHover!important;
+      background-color: $menuHover !important;
     }
   }
-  .el-menu--collapse .el-menu .el-submenu{
-    min-width: 180px!important;
+  .el-menu--collapse .el-menu .el-submenu {
+    min-width: 180px !important;
   }
 }
