--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -36,6 +36,11 @@
     overflow-x: hidden;
     overflow-y: auto;
   }
+
+  .components-container-full{
+
+  }
+
   .hideSidebar {
     .sidebar-container, .sidebar-container .el-menu {
       width: 36px !important;
