--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,7 +126,7 @@ code {
   }
 }
 
-//main-container全局样式
+//app-container全局样式
 .app-container {
   padding: 20px;
 }
@@ -134,6 +134,15 @@ code {
 .components-container {
   margin: 30px 50px;
   position: relative;
+}
+
+.components-container-full{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .pagination-container {
